--- a/src/main/webapp/app/entities/focus-group/focus-group.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group.component.html
@@ -2,7 +2,7 @@
     <div class="col-sm-12">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">Grupo de enfoque
+                <h4 class="card-title">Grupos de enfoque
                     <button id="jh-create-entity" class="btn btn-raised btn-primary float-right"
                             [routerLink]="['/focus-group/new']">
                         <i class="ft-plus"></i>
@@ -30,7 +30,7 @@
                             <tr>
                                 <th><span>Nombre</span></th>
                                 <th><span>Fecha de inicio</span></th>
-                                <th><span>Fecha de finalizacion</span></th>
+                                <th><span>Fecha de finalización</span></th>
                                 <th><span>Código</span></th>
                                 <th><span>Acciones</span></th>
                             </tr>
