--- a/src/main/webapp/app/entities/aptitude-test/aptitude-test-form.component.html
+++ b/src/main/webapp/app/entities/aptitude-test/aptitude-test-form.component.html
@@ -9,7 +9,7 @@
                     <input #floatName="ngModel" type="text" class="form-control" name="name" id="field_name"
                            [(ngModel)]="aptitudeTest.name" required/>
                     <small class="form-text text-muted danger" *ngIf="!floatName.valid && (floatName.dirty ||
-                                 floatName.touched)">¡Nombre requerido!
+                                 floatName.touched)">Este campo es requerido.
                     </small>
                 </div>
                 <div id="addQuestionSection">
