--- a/src/main/webapp/app/entities/meeting/meeting-create.component.html
+++ b/src/main/webapp/app/entities/meeting/meeting-create.component.html
@@ -1,6 +1,5 @@
 <div class="card">
     <div class="card-header">
-        <h2 class="card-title" id="jhi-meeting-heading">Crear una nueva reunión</h2>
     </div>
     <div class="card-body">
         <div class="px-3">
@@ -8,6 +7,7 @@
                   (ngSubmit)="save()" #editForm="ngForm">
                 <div class="row justify-content-md-center">
                     <div class="col-md-6">
+                        <h2 class="card-title" id="jhi-meeting-heading">Reunión</h2>
                         <div class="form-body">
                             <h4 class="form-section"><i class="ft-user"></i>Registro</h4>
                             <!--<div class="form-group" [hidden]="!meeting.id">-->
@@ -16,19 +16,19 @@
                                        <!--[(ngModel)]="meeting.id" readonly/>-->
                             <!--</div>-->
                             <div class="form-group">
-                                <label for="field_date">Fecha</label>
+                                <label for="field_date">Fecha de la reunión</label>
                                 <div class="input-group">
                                     <input id="field_date" type="text" class="form-control" name="date" ngbDatepicker  #dateDp="ngbDatepicker" [(ngModel)]="meeting.date"
-                                           required/>
+                                           required #date="ngModel"/>
                                     <span class="input-group-append">
                                             <button type="button" class="btn btn-secondary" (click)="dateDp.toggle()">
                                                 <fa-icon [icon]="'calendar-alt'"></fa-icon>
                                             </button>
                                     </span>
                                 </div>
-                                <div [hidden]="!(editForm.controls.date?.dirty && editForm.controls.date?.invalid)">
+                                <div [hidden]="!((date?.touched || date?.dirty) && date?.invalid)">
                                     <small class="form-text text-danger"
-                                           [hidden]="!editForm.controls.date?.errors?.required">
+                                           [hidden]="!date?.errors?.required">
                                         Este campo es requerido.
                                     </small>
                                 </div>
@@ -36,27 +36,27 @@
                             <div class="form-group">
                                 <label class="form-control-label" for="field_time">Hora</label>
                                 <div class="d-flex">
-                                    <input id="field_time" type="time" class="form-control" name="time" [(ngModel)]="time" placeholder="HH:mm"
+                                    <input #timeR="ngModel" id="field_time" type="time" class="form-control" name="time" [(ngModel)]="time" placeholder="HH:mm"
                                            required/>
                                 </div>
-                                <div [hidden]="!(editForm.controls.time?.dirty && editForm.controls.time?.invalid)">
+                                <div [hidden]="!((timeR?.dirty || timeR?.touched) && timeR?.invalid)">
                                     <small class="form-text text-danger"
-                                           [hidden]="!editForm.controls.time?.errors?.required">
+                                           [hidden]="!timeR?.errors?.required">
                                         Este campo es requerido.
                                     </small>
                                     <small class="form-text text-danger"
-                                           [hidden]="!editForm.controls.time?.errors?.LocalTime">
+                                           [hidden]="!timeR?.errors?.LocalTime">
                                         Este campo debería ser de tiempo.
                                     </small>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label" for="field_name">Nombre</label>
-                                <input type="text" class="form-control" name="name" id="field_name"
+                                <input #nameR="ngModel" type="text" class="form-control" name="name" id="field_name"
                                        [(ngModel)]="meeting.name" required/>
-                                <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
+                                <div [hidden]="!((nameR?.dirty || nameR?.touched) && nameR?.invalid)">
                                     <small class="form-text text-danger"
-                                           [hidden]="!editForm.controls.name?.errors?.required">
+                                           [hidden]="!nameR?.errors?.required">
                                         Este campo es requerido.
                                     </small>
                                 </div>
@@ -74,16 +74,34 @@
                                 <!--</select>-->
                             <!--</div>-->
                         </div>
-                        <div class="form-actions">
-                            <button type="button" id="cancel-save" class="btn btn-raised btn-warning mr-1"
-                                    (click)="previousState()">
-                                <i class="ft-x"></i> Cancelar
-                            </button>
-                            <button class="btn btn-raised btn-primary" type="submit" id="save-entity"
-                                    [disabled]="editForm.form.invalid || isSaving">
-                                <i class="ft ft-file-text"></i> Registrar
-                            </button>
-
+                        <div class="row">
+                            <div class="col-auto">
+                                <button type="button" id="cancel-save" class="btn btn-raised btn-warning mr-1"
+                                        (click)="previousState()">
+                                    <i class="ft-x"></i> Cancelar
+                                </button>
+                            </div>
+                            <div
+                                *ngIf="editForm.form.invalid || isSaving; else validRegisterBtn"
+                                [ngbPopover]="popoverText"
+                                triggers="mouseenter:mouseleave" popoverTitle="Formulario inválido." class="col-auto">
+                                <button class="btn btn-raised btn-primary" type="submit" id="save-entity"
+                                        [disabled]="true">
+                                    <i class="ft ft-file-text"></i> Registrar
+                                </button>
+                            </div>
+                            <ng-template #popoverText>
+                                <small class="display-block">Por favor, asegúrese de que todos los campos estén completos.
+                                </small>
+                            </ng-template>
+                            <ng-template #validRegisterBtn>
+                                <div class="col-auto">
+                                    <button type="submit" id="save-entity"
+                                            class="btn btn-raised btn-primary">
+                                        <i class="ft ft-file-text"></i> Registrar
+                                    </button>
+                                </div>
+                            </ng-template>
                         </div>
                     </div>
 
