--- a/src/main/webapp/app/entities/participant/participant.component.html
+++ b/src/main/webapp/app/entities/participant/participant.component.html
@@ -27,8 +27,14 @@
 
                             <tr *ngFor="let participant of participants ;trackBy: trackId">
                                 <td>{{participant.birthdate | date:'mediumDate'}}</td>
-                                <td>{{participant.gender}}</td>
-                                <td>{{participant.civilStatus}}</td>
+                                <td><p *ngIf="participant.gender === 'MALE'">Masculino</p>
+                                    <p *ngIf="participant.gender === 'FEMALE'">Femenino</p>
+                                    <p *ngIf="participant.gender === 'UNDEFINED'">Otro</p></td>
+                                <td><p *ngIf="participant.civilStatus === 'MARRIED'">Casado/a</p>
+                                    <p *ngIf="participant.civilStatus === 'WIDOWED'">Viudo/a</p>
+                                    <p *ngIf="participant.civilStatus === 'SEPARATED'">Separado/a</p>
+                                    <p *ngIf="participant.civilStatus === 'DIVORCED'">Divorciado/a</p>
+                                    <p *ngIf="participant.civilStatus === 'SINGLE'">Soltero/a</p></td>
                                 <!--<td>{{participant.picture}}</td>-->
                                 <td>
                                     <div *ngIf="participant.user">
@@ -43,7 +49,7 @@
                                 <!--</td>-->
                                 <td _ngcontent-c6="">
                                     <a [routerLink]="['/participant', participant.id, 'view' ]" _ngcontent-c6="" class="info p-0" data-original-title="" title="">
-                                        <i _ngcontent-c6="" class="ft-user font-medium-3 mr-2"></i>
+                                        <i _ngcontent-c6="" class="ft-eye font-medium-3 mr-2"></i>
                                     </a>
                                     <a [routerLink]="['/participant', participant.id, 'edit']" _ngcontent-c6="" class="success p-0" data-original-title="" title="">
                                         <i _ngcontent-c6="" class="ft-edit-2 font-medium-3 mr-2"></i>
