--- a/src/main/webapp/app/entities/user-app/user-app.component.html
+++ b/src/main/webapp/app/entities/user-app/user-app.component.html
@@ -28,10 +28,10 @@
                             <thead>
                             <tr>
                                 <!--<th><span></span></th>-->
-                                <th><span>Nombre usuario</span></th>
+                                <th><span>Nombre de usuario</span></th>
                                 <th><span>Nombre</span></th>
                                 <th><span>Identificación</span></th>
-                                <th><span>Correo electronico</span></th>
+                                <th><span>Correo electrónico</span></th>
                                 <th><span>Rol</span></th>
                                 <th><span>Activo</span></th>
                                 <th></th>
@@ -57,7 +57,7 @@
                                 <td>
                                     <a class="info p-0" data-original-title="" title=""
                                        [routerLink]="['/user-app', userApp.id, 'view' ]">
-                                        <i class="ft-user font-medium-3 mr-2"></i>
+                                        <i class="ft-eye font-medium-3 mr-2"></i>
                                     </a>
                                     <a class="success p-0" data-original-title="" title=""
                                        [routerLink]="['/user-app', userApp.id, 'edit']">
